--- a/app/src/main/res/layout/add_student_sheet.xml
+++ b/app/src/main/res/layout/add_student_sheet.xml
@@ -4,34 +4,68 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingHorizontal="16dp"
+    android:paddingBottom="32dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginHorizontal="16dp"
         style="@style/TextAppearance.MaterialComponents.Headline5"
         android:text="@string/enter_name"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/add_student_field"
+        android:id="@+id/add_student_lastname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="16dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="@string/student_hint_name"
-        app:endIconMode="custom"
-        app:endIconTint="@color/color_on_surface"
-        app:endIconDrawable="@drawable/ic_add">
+        android:hint="@string/student_hint_lastname">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/add_student_edit_text"
+            android:id="@+id/add_student_lastname_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/add_student_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:hint="@string/student_hint_name">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/add_student_name_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/add_student_middlename"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:hint="@string/student_hint_middlename">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/add_student_middlename_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/add_student_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.Button"
+        android:text="@string/add_student_button_text"/>
 
 </LinearLayout>
