--- a/app/src/main/res/layout/studentlist_item.xml
+++ b/app/src/main/res/layout/studentlist_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="@dimen/studentlist_item_height"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingHorizontal="16dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingHorizontal="@dimen/studentlist_horizontal_padding">
 
     <TextView
         android:id="@+id/name"
@@ -13,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/time"
         style="@style/TextAppearance.AppCompat.Body2"
-        android:text="Student name"/>
+        tools:text="Student name"/>
     <TextView
         android:id="@+id/time"
         android:layout_width="match_parent"
@@ -21,6 +22,6 @@
         app:layout_constraintTop_toBottomOf="@id/name"
         app:layout_constraintBottom_toBottomOf="parent"
         style="@style/TextAppearance.AppCompat.Caption"
-        android:text="Time"/>
+        tools:text="Time"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
